small changes in quote api